--- a/StormPC/.env.example
+++ b/StormPC/.env.example
@@ -1,6 +1,6 @@
 # Database Configuration
 # Copy file này thành .env và điền thông tin thực tế
-DB_PROVIDER=PostgreSQL
+DB_PROVIDER=postgresql
 DB_HOST=your_host
 DB_PORT=your_port
 DB_NAME=your_database_name
