--- a/StormPC/StormPC.Core/StormPC.Core.csproj
+++ b/StormPC/StormPC.Core/StormPC.Core.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.0" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="9.0.3" />
