--- a/StormPC/StormPC/StormPC.csproj
+++ b/StormPC/StormPC/StormPC.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231219000" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
     <PackageReference Include="WinUIEx" Version="2.3.3" />
+    <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup>
