feat(viewmodels): enhance ProductsViewModel with price range filtering
- Added properties for minimum and maximum price, along with formatted price strings for display.
- Implemented logic to filter laptops based on the specified price range and search text.
- Updated pagination and total item count calculations to reflect filtered results.
- Introduced methods to update the price range and apply filters dynamically.

--- a/StormPC/StormPC/StormPC.csproj
+++ b/StormPC/StormPC/StormPC.csproj
@@ -33,6 +33,8 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
     <PackageReference Include="WinUIEx" Version="2.3.3" />
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
+    <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.Primitives" Version="7.1.2" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.RangeSelector" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup>
