feat(build): update .gitignore and appxmanifest for improved packaging
- Added 'Build/' directory to .gitignore to prevent build artifacts from being tracked.
- Updated Package.appxmanifest version from 1.0.1.2 to 1.0.5.2 to reflect the latest changes.
- Enhanced StormPC.csproj with new properties for app installer generation and package signing settings.

--- a/StormPC/StormPC/StormPC.csproj
+++ b/StormPC/StormPC/StormPC.csproj
@@ -14,6 +14,16 @@
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+    <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+    <AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>
+    <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
+    <GenerateTestArtifacts>True</GenerateTestArtifacts>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
+    <AppInstallerUri>E:\StormPC</AppInstallerUri>
+    <AppxPackageDir>C:\Users\vietc\Downloads\HK5\DoAn_UDQL2\output_stormpc</AppxPackageDir>
   </PropertyGroup>
 
   <ItemGroup>
