--- a/StormPC/StormPC/StormPC.csproj
+++ b/StormPC/StormPC/StormPC.csproj
@@ -33,10 +33,6 @@
   <ItemGroup>
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.5.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="itext7" Version="9.1.0" />
-    <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.1.0" />
-    <PackageReference Include="itext7.commons" Version="9.1.0" />
-    <PackageReference Include="itext7.pdfhtml" Version="6.1.0" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.WinUI" Version="2.0.0-rc5.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
@@ -47,6 +43,7 @@
     <PackageReference Include="WinUIEx" Version="2.3.3" />
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
     <PackageReference Include="CommunityToolkit.WinUI.Controls.RangeSelector" Version="7.1.2" />
+    <PackageReference Include="QuestPDF" Version="2023.12.4" />
   </ItemGroup>
 
   <ItemGroup>
